--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,4 +1,4 @@
-@import "/home/stefan/.cache/wal/colors-waybar.css";
+@import "../../.cache/wal/colors-waybar.css";
 * {
 	border-radius: 16;
 	border: none;
