add clipboard menu and custom repo

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -66,8 +66,9 @@ window#waybar {
 #tray,
 #language,
 #pulseaudio,
+#custom-temperature,
 #clock {
-	padding: 0 6px;
+	padding: 0 4px;
 	margin: 0 0px;
 	color: @fg;
 	background-color: transparent;
