--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -68,6 +68,7 @@ window#waybar {
 #pulseaudio,
 #custom-expand-icon,
 #custom-temperature,
+#custom-screenrecording-indicator,
 #mpris,
 #clock {
 	padding: 0 4px;
@@ -76,12 +77,17 @@ window#waybar {
 	background-color: transparent;
 }
 
+#custom-screenrecording-indicator {
+  font-size: 30px;
+}
+
 #tray, #custom-weather {
 background-color: @color3_70;
 padding: 0px 6px;
 margin-top: 5px;
 margin-bottom: 5px;
 }
+
 #custom-menu {
 	background-color: transparent;
 	color: @cyan;
@@ -90,9 +96,11 @@ margin-bottom: 5px;
 	margin-top: 1px;
 	font-size: 20px;
 }
+
 #custom-screenshot {
 font-size: 18px;
 }
+
 #custom-wlogout{
 background-color: @color2;
 padding: 0px 4px 0px 6px;
@@ -100,6 +108,7 @@ margin-top: 5px;
 margin-bottom: 5px;
 margin-left: 6px;
 }
+
 #custom-sep {
 	color: rgba(0, 0, 0, 0.0);
 }
