--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -96,9 +96,9 @@ window#waybar {
 
 #custom-expand-icon {
   background-color: @color3_70;
-  padding: 0px 3px 0px 3px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  padding: 0px 4px 0px 3px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 #tray {
@@ -111,8 +111,8 @@ window#waybar {
 #custom-weather {
   background-color: @color3_70;
   padding: 0px 6px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 #custom-menu {
@@ -136,9 +136,9 @@ window#waybar {
 
 #custom-wlogout{
   background-color: @color2;
-  padding: 0px 3px 0px 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  padding: 0px 4px 0px 6px;
+  margin-top: 4px;
+  margin-bottom: 4px;
   margin-left: 6px;
   margin-right: 6px;
   color: @bg;
@@ -161,8 +161,9 @@ window#waybar {
 }
 
 #clock {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  padding: 0px 6px;
+  margin-top: 4px;
+  margin-bottom: 4px;
   background-color: @color2;
   color: @bg;
 }
